--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
-	<title>Nina Carducci,photographe professionnel à Bordeaux</title>
-	<meta name="description" content=" Nina Carducci est une entreprise de photographie à Bordeaux,vous pouvez y faire les devis de vos photos ou encore d'albums photographiques."> 
+	<title>Photographe Professionnel à Bordeaux</title>
+	<meta name="description" content=" Envie d'immortaliser un moment spécial ? ou seulement garder un bon souvenir des moments de votre vie ? 
+	Nina Carducci est là pour réaliser vos voeux en tant que photographe professionnel à Bordeaux,vous pouvez souscrire un devis, ou commander
+   vos photos et albums."> 
 
 
 <!-- meta pour facebook -->
 <meta property="og:title" content="Nina Carducci,photographe à Bordeaux" />
 <meta property="og:type" content="article" />
-<meta property="og:description" content="Nina Carducci est une entreprise de photographie à Bordeaux,vous pouvez y faire les devis de vos photos ou encore d'albums photographiques." />
+<meta property="og:description" content="Envie d'immortaliser un moment spécial ? ou seulement garder un bon souvenir des moments de votre vie ? 
+Nina Carducci est là pour réaliser vos voeux en tant que photographe professionnel à Bordeaux,vous pouvez souscrire un devis, ou commander
+vos photos et albums." />
 <meta property="author" content="Nina Carducci" />
 <meta property="og:image" content="https://thomas67500.github.io/projet5/assets/images/webp/nina-560.webp" />
 <meta property="og:image:width" content="1200">
@@ -30,13 +34,17 @@
 <meta name="twitter:site" content="Nina Carducci" />
 <meta name="twitter:creator" content="Nina Carducci" />
 <meta name="twitter:title" content="Nina Carducci,photographe à Bordeaux" />
-<meta name="twitter:description" content="Nina Carducci est une entreprise de photographie à Bordeaux,vous pouvez y faire les devis de vos photos ou encore d'albums photographiques." />
+<meta name="twitter:description" content="Envie d'immortaliser un moment spécial ? ou seulement garder un bon souvenir des moments de votre vie ? 
+Nina Carducci est là pour réaliser vos voeux en tant que photographe professionnel à Bordeaux,vous pouvez souscrire un devis, ou commander
+vos photos et albums." />
 <meta name="twitter:image" content="https://thomas67500.github.io/projet5/assets/images/webp/nina-560.webp" />
 
 <!-- meta Pinterest-->
 <meta property="og:type" content="article" />
   <meta property="og:title" content="Nina Carducci,photographe professionnelle bordelaise" />
-  <meta property="og:description" content="Nina Carducci est une entreprise de photographie à Bordeaux,vous pouvez y faire les devis de vos photos ou encore d'albums photographiques." />
+  <meta property="og:description" content="Envie d'immortaliser un moment spécial ? ou seulement garder un bon souvenir des moments de votre vie ? 
+  Nina Carducci est là pour réaliser vos voeux en tant que photographe professionnel à Bordeaux,vous pouvez souscrire un devis, ou commander
+ vos photos et albums." />
   <meta property="og:url" content="https://thomas67500.github.io/projet5/" />
   <meta property="article:author" content="Nina Carducci" />
 
@@ -96,17 +104,17 @@
 				./assets/images/sliderwebp/buiseness-crosswalk-1140.webp 1140w, 
 				./assets/images/sliderwebp/buiseness-crosswalk-300.webp 300w"
 				sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
-				class="d-block w-100"  alt="Grâce aux différentes méthodes de compositions,sublimez vos photos !"> 
+				class="d-block w-100"  alt="Un homme sur un passage clouté"> 
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/sliderwebp/crowd-festival-1920.webp"
 				srcset="./assets/images/sliderwebp/crowd-festival-1920.webp 1920w, 
 				./assets/images/sliderwebp/crowd-festival-2048.webp 2048w "
 				sizes="100vw" 
-				class="d-block w-100" alt="Sortez toujours du lot,même au milieu d'une foule"> 
+				class="d-block w-100" alt="Une foule à un festival"> 
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/sliderwebp/wedding-kiss-family-1920.webp" class="d-block w-100" alt="Immortalisez vos plus grands souvenirs.">
+				<img src="./assets/images/sliderwebp/wedding-kiss-family-1920.webp" class="d-block w-100" alt="Un couple marié qui s'embrasse">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -129,7 +137,7 @@
 		./assets/images/webp/nina-560.webp 560w,
 		./assets/images/webp/nina-256.webp 256w"
 		sizes="(min-width: 2020px) 560px, (min-width: 1200px) calc(30vw - 40px), (min-width: 660px) calc(46.15vw - 75px), calc(80vw - 51px)"
-		alt="Nina Carducci, votre photographe qui va tout faire pour surpasser vos attentes!">
+		alt="Nina Carducci">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -152,7 +160,7 @@
 			./assets/images/gallerywebp/concert/concert-crowd-photo-448.webp 448w,
 			./assets/images/gallerywebp/concert/concert-crowd-photo-224.webp 224w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="Revivez certains évenements comme si vous y étiez de nouveau."/>
+			alt="Un concert"/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/professional-suit-photo-4000.webp" 
 			srcset="./assets/images/gallerywebp/entreprise/professional-suit-photo-4000.webp 400w,
 			./assets/images/gallerywebp/entreprise/professional-suit-photo-1090.webp 1090w,
@@ -162,7 +170,7 @@
 			./assets/images/gallerywebp/entreprise/professional-suit-photo-448.webp 448w,
 			./assets/images/gallerywebp/entreprise/professional-suit-photo-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="Soyez toujours prêt pour vos entretiens !"/>
+			alt="Un homme en costume"/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/team-photo-4084.webp" 
 			srcset="./assets/images/gallerywebp/entreprise/team-photo-4084.webp 4084w,
 			./assets/images/gallerywebp/entreprise/team-photo-1090.webp 1090w,
@@ -170,7 +178,7 @@
 			./assets/images/gallerywebp/entreprise/team-photo-608.webp 608w,
 			./assets/images/gallerywebp/entreprise/team-photo-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="Sublimez votre esprit d'équipe !"/>
+			alt="Une équipe au travail"/>
 			
 			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallerywebp/mariage/hands-ring-photo-4453.webp" 
 			srcset="./assets/images/gallerywebp/mariage/hands-ring-photo-4453.webp 4453w,
@@ -179,7 +187,7 @@
 			./assets/images/gallerywebp/mariage/hands-ring-photo-608.webp 608w,
 			./assets/images/gallerywebp/mariage/hands-ring-photo-304.webp 304w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="Pour mettre en valeur le symbole de votre union"/>
+			alt="Les mains d'un couple marié"/>
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/man-model-2211.webp" 
 			srcset="./assets/images/gallerywebp/portraits/man-model-2211.webp 2211w,
 			./assets/images/gallerywebp/portraits/man-model-1090.webp 1090w,
@@ -189,7 +197,7 @@
 			./assets/images/gallerywebp/portraits/man-model-448.webp 448w,
 			./assets/images/gallerywebp/portraits/man-model-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="Pour prendre la photo au moment le plus opportun "/>
+			alt="Un modèle masculin "/>
 			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-4480.webp"
 			srcset="./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-4480.webp 4480w,
 			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-1090.webp 1090w,
@@ -199,7 +207,7 @@
 			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-448.webp 448w,
 			./assets/images/gallerywebp/mariage/mariage-couple-walk-photo-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="Pour immortaliser votre union."/>
+			alt="Un couple marié qui se tiens la main en souriant"/>
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallerywebp/portraits/woman-model-4024.webp" 
 			srcset="./assets/images/gallerywebp/portraits/woman-model-4024.webp 4024w,
 			./assets/images/gallerywebp/portraits/woman-model-1090.webp 1090w,
@@ -209,7 +217,7 @@
 			./assets/images/gallerywebp/portraits/woman-model-448.webp 448w,
 			./assets/images/gallerywebp/portraits/woman-model-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="Toujours être innovant pour vous mettre en valeur !"/>
+			alt="Un modèle féminin"/>
 			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallerywebp/concert/singer-photo.webp" 
 			srcset="./assets/images/gallerywebp/concert/singer-photo.webp 5233w,
 			./assets/images/gallerywebp/concert/singer-photo-1090.webp 1090w,
@@ -217,14 +225,14 @@
 			./assets/images/gallerywebp/concert/singer-photo-608.webp 608w,
 			./assets/images/gallerywebp/concert/singer-photo-254.webp 254w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="Pour immortaliser des moments marquants d'un concert !"/>
+			alt="Un chanteur"/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallerywebp/entreprise/work-desk-computer-photo-6000.webp" 
 			srcset="./assets/images/gallerywebp/entreprise/work-desk-computer-photo-6000.webp 6000w,
 			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-1090.webp 1090w,
 			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-848.webp 848w,
 			./assets/images/gallerywebp/entreprise/work-desk-computer-photo-608.webp 608w"
 			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-			alt="Sublimez votre quotidien."/>
+			alt="Une femme a son bureau"/>
 		</div>
 	</div>
 	<div class="quote">
